gui file picker + initial cells for the challenge

--- a/Music_Learning.ipynb
+++ b/Music_Learning.ipynb
@@ -1588,6 +1588,70 @@
   },
   {
    "cell_type": "markdown",
+   "id": "947b39b5",
+   "metadata": {},
+   "source": [
+    "## \"Challenge\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20a0affe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate all the classifiers and fit them\n",
+    "svm_clf_chall = skl.svm.SVC(C=C_best, kernel='rbf').fit(X_train, y_train)\n",
+    "lr_clf_chall = LogisticRegression(C=1, penalty=\"l1\", dual=False, solver='saga').fit(X_train, \n",
+    "                                                                                    y_train)\n",
+    "knn_clf_chall = KNeighborsClassifier(10).fit(X_train, y_train)\n",
+    "mlp_clf_chall = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(n_hidden_opt,), \n",
+    "                            random_state=1).fit(X_train, y_train)\n",
+    "dt_clf_chall = DecisionTreeClassifier(min_samples_leaf=70).fit(X_train, y_train).fit(X_train, \n",
+    "                                                                                     y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "85a0b770",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import open_file_dialog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48dc11e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Open dialogue box\n",
+    "open_file_dialog()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89794b67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the probability scores for each classifier.\n",
+    "# We are supposing that the X train and y train are just the one element that we are trying\n",
+    "# to classify.\n",
+    "svm_probs = svm_clf_chall.predict_proba(X_test_elem)\n",
+    "lr_probs = lr_clf_chall.predict_proba(X_test_elem)\n",
+    "knn_probs = knn_clf_chall.predict_proba(X_test_elem)\n",
+    "mlp_probs = mlp_clf_chall.predict_proba(X_test_elem)\n",
+    "dt_probs = dt_clf_chall.predict_proba(X_test_elem)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "02f9bbba",
    "metadata": {},
    "source": [
