--- a/Music_Learning.ipynb
+++ b/Music_Learning.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "id": "55491d84",
    "metadata": {},
    "outputs": [],
@@ -46,13 +46,18 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "import librosa\n",
-    "import librosa.display\n",
+    "from IPython.display import Audio\n",
+    "import scipy\n",
+    "from tinytag import TinyTag\n",
+    "from genres import post_processing\n",
     "\n",
     "import ast\n",
     "import os\n",
     "import cmath\n",
+    "import csv\n",
     "\n",
     "from collections import Counter\n",
     "from imblearn.over_sampling import SMOTE\n",
@@ -76,12 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "1eca3b4c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "VERSION = 0"
+    "VERSION = 1"
    ]
   },
   {
@@ -100,10 +105,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "id": "5d12f9e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chroma_stft_mean\n",
+      "chroma_stft_min\n",
+      "chroma_stft_max\n",
+      "chroma_stft_median\n",
+      "chroma_stft_std\n",
+      "chroma_stft_skew\n",
+      "chroma_stft_kurtosis\n",
+      "chroma_cens_mean\n",
+      "chroma_cens_min\n",
+      "chroma_cens_max\n",
+      "chroma_cens_median\n",
+      "chroma_cens_std\n",
+      "chroma_cens_skew\n",
+      "chroma_cens_kurtosis\n",
+      "chroma_cqt_mean\n",
+      "chroma_cqt_min\n",
+      "chroma_cqt_max\n",
+      "chroma_cqt_median\n",
+      "chroma_cqt_std\n",
+      "chroma_cqt_skew\n",
+      "chroma_cqt_kurtosis\n",
+      "melspectrogram_mean\n",
+      "melspectrogram_min\n",
+      "melspectrogram_max\n",
+      "melspectrogram_median\n",
+      "melspectrogram_std\n",
+      "melspectrogram_skew\n",
+      "melspectrogram_kurtosis\n",
+      "mfcc_mean\n",
+      "mfcc_min\n",
+      "mfcc_max\n",
+      "mfcc_median\n",
+      "mfcc_std\n",
+      "mfcc_skew\n",
+      "mfcc_kurtosis\n",
+      "poly_features_mean\n",
+      "poly_features_min\n",
+      "poly_features_max\n",
+      "poly_features_median\n",
+      "poly_features_std\n",
+      "poly_features_skew\n",
+      "poly_features_kurtosis\n",
+      "rms_mean\n",
+      "rms_min\n",
+      "rms_max\n",
+      "rms_median\n",
+      "rms_std\n",
+      "rms_skew\n",
+      "rms_kurtosis\n",
+      "spectral_bandwidth_mean\n",
+      "spectral_bandwidth_min\n",
+      "spectral_bandwidth_max\n",
+      "spectral_bandwidth_median\n",
+      "spectral_bandwidth_std\n",
+      "spectral_bandwidth_skew\n",
+      "spectral_bandwidth_kurtosis\n",
+      "spectral_centroid_mean\n",
+      "spectral_centroid_min\n",
+      "spectral_centroid_max\n",
+      "spectral_centroid_median\n",
+      "spectral_centroid_std\n",
+      "spectral_centroid_skew\n",
+      "spectral_centroid_kurtosis\n",
+      "spectral_contrast_mean\n",
+      "spectral_contrast_min\n",
+      "spectral_contrast_max\n",
+      "spectral_contrast_median\n",
+      "spectral_contrast_std\n",
+      "spectral_contrast_skew\n",
+      "spectral_contrast_kurtosis\n",
+      "spectral_flatness_mean\n",
+      "spectral_flatness_min\n",
+      "spectral_flatness_max\n",
+      "spectral_flatness_median\n",
+      "spectral_flatness_std\n",
+      "spectral_flatness_skew\n",
+      "spectral_flatness_kurtosis\n",
+      "spectral_rolloff_mean\n",
+      "spectral_rolloff_min\n",
+      "spectral_rolloff_max\n",
+      "spectral_rolloff_median\n",
+      "spectral_rolloff_std\n",
+      "spectral_rolloff_skew\n",
+      "spectral_rolloff_kurtosis\n",
+      "tempogram_mean\n",
+      "tempogram_min\n",
+      "tempogram_max\n",
+      "tempogram_median\n",
+      "tempogram_std\n",
+      "tempogram_skew\n",
+      "tempogram_kurtosis\n",
+      "tonnetz_mean\n",
+      "tonnetz_min\n",
+      "tonnetz_max\n",
+      "tonnetz_median\n",
+      "tonnetz_std\n",
+      "tonnetz_skew\n",
+      "tonnetz_kurtosis\n",
+      "zero_crossing_rate_mean\n",
+      "zero_crossing_rate_min\n",
+      "zero_crossing_rate_max\n",
+      "zero_crossing_rate_median\n",
+      "zero_crossing_rate_std\n",
+      "zero_crossing_rate_skew\n",
+      "zero_crossing_rate_kurtosis\n",
+      "Class=6, n=3479 (22.308%)\n",
+      "Class=17, n=3090 (19.814%)\n",
+      "Class=8, n=822 (5.271%)\n",
+      "Class=10, n=1434 (9.195%)\n",
+      "Class=3, n=116 (0.744%)\n",
+      "Class=0, n=236 (1.513%)\n",
+      "Class=13, n=341 (2.187%)\n",
+      "Class=4, n=323 (2.071%)\n",
+      "Class=1, n=169 (1.084%)\n",
+      "Class=2, n=252 (1.616%)\n",
+      "Class=15, n=409 (2.623%)\n",
+      "Class=16, n=438 (2.809%)\n",
+      "Class=7, n=541 (3.469%)\n",
+      "Class=9, n=161 (1.032%)\n",
+      "Class=5, n=67 (0.430%)\n",
+      "Class=11, n=219 (1.404%)\n",
+      "Class=12, n=209 (1.340%)\n",
+      "Class=18, n=112 (0.718%)\n",
+      "Class=14, n=213 (1.366%)\n",
+      "Class=6, n=3479 (27.543%)\n",
+      "Class=17, n=3090 (24.464%)\n",
+      "Class=8, n=822 (6.508%)\n",
+      "Class=10, n=1434 (11.353%)\n",
+      "Class=3, n=116 (0.918%)\n",
+      "Class=0, n=236 (1.868%)\n",
+      "Class=13, n=341 (2.700%)\n",
+      "Class=4, n=323 (2.557%)\n",
+      "Class=1, n=169 (1.338%)\n",
+      "Class=2, n=252 (1.995%)\n",
+      "Class=15, n=409 (3.238%)\n",
+      "Class=16, n=438 (3.468%)\n",
+      "Class=7, n=541 (4.283%)\n",
+      "Class=9, n=161 (1.275%)\n",
+      "Class=5, n=67 (0.530%)\n",
+      "Class=11, n=219 (1.734%)\n",
+      "Class=12, n=209 (1.655%)\n",
+      "Class=18, n=112 (0.887%)\n",
+      "Class=14, n=213 (1.686%)\n"
+     ]
+    }
+   ],
    "source": [
     "# Open file, extract feature set and label set\n",
     "if VERSION:\n",
@@ -111,7 +266,8 @@
     "    dataframe = pd.read_csv(path)\n",
     "    y = dataframe[\"genre\"]\n",
     "    dataframe = dataframe.drop(columns=[\"title\", \"artist\", \"filename\", \"album\", \"genre\"])\n",
-    "    X = dataframe.drop(columns=drop_complex_cols(dataframe))\n",
+    "    dataframe = dataframe.drop(columns=drop_complex_cols(dataframe))\n",
+    "    X = dataframe.drop(columns=[\"fourier_tempogram_std\"])\n",
     "\n",
     "    # Label encoding and extraction of uniques for later purposes\n",
     "    le = LabelEncoder()\n",
@@ -227,24 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "id": "3236de12",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3.10/site-packages/sklearn/model_selection/_split.py:684: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=2.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.568  0.583]\n",
-      "0.636\n",
+      "[0.49287749 0.4957265 ]\n",
+      "0.5307692307692308\n",
       "------------------------- SVM completed -------------------------\n"
      ]
     },
@@ -252,7 +400,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1327: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
@@ -970,7 +1118,6 @@
     }
    ],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "dt_clf = DecisionTreeClassifier(min_samples_leaf=70).fit(X_train, y_train)\n",
     "print(np.asarray(cross_val_score(dt_clf, X_validate, y_validate, cv=2)).mean())\n",
     "print(dt_clf.score(X_test, y_test))\n",
@@ -1596,13 +1743,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "20a0affe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:350: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:559: ConvergenceWarning: lbfgs failed to converge (status=2):\n",
+      "ABNORMAL_TERMINATION_IN_LNSRCH.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "  self.n_iter_ = _check_optimize_result(\"lbfgs\", opt_res, self.max_iter)\n"
+     ]
+    }
+   ],
    "source": [
+    "from utils import open_file_dialog\n",
+    "\n",
     "# Instantiate all the classifiers and fit them\n",
-    "svm_clf_chall = skl.svm.SVC(C=C_best, kernel='rbf').fit(X_train, y_train)\n",
+    "C_best = 20\n",
+    "n_hidden_opt = 70\n",
+    "svm_clf_chall = skl.svm.SVC(C=C_best, kernel='rbf', probability=True).fit(X_train, y_train)\n",
     "lr_clf_chall = LogisticRegression(C=1, penalty=\"l1\", dual=False, solver='saga').fit(X_train, \n",
     "                                                                                    y_train)\n",
     "knn_clf_chall = KNeighborsClassifier(10).fit(X_train, y_train)\n",
@@ -1614,31 +1780,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "85a0b770",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import open_file_dialog"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "48dc11e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\librosa\\util\\decorators.py:88: UserWarning: PySoundFile failed. Trying audioread instead.\n",
+      "  return f(*args, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# Open dialogue box\n",
-    "open_file_dialog()"
+    "file_path = open_file_dialog()\n",
+    "\n",
+    "def get_mfcc(y, sr):\n",
+    "    mfcc = np.array(librosa.feature.mfcc(y=y, sr=sr))\n",
+    "    return mfcc\n",
+    "\n",
+    "def get_melspectrogram(y, sr):\n",
+    "    melspectrogram = np.array(librosa.feature.melspectrogram(y=y, sr=sr))\n",
+    "    return melspectrogram\n",
+    "\n",
+    "def get_chroma_stft(y, sr):\n",
+    "    chroma_stft = np.array(librosa.feature.chroma_stft(y=y, sr=sr))\n",
+    "    return chroma_stft\n",
+    "\n",
+    "def get_tonnetz(y, sr):\n",
+    "    tonnetz = np.array(librosa.feature.tonnetz(y=y, sr=sr))\n",
+    "    return tonnetz\n",
+    "\n",
+    "def get_chroma_cqt(y, sr):\n",
+    "    chroma_cqt = np.array(librosa.feature.chroma_cqt(y=y, sr=sr))\n",
+    "    return chroma_cqt\n",
+    "\n",
+    "def get_chroma_cens(y, sr):\n",
+    "    chroma_cens = np.array(librosa.feature.chroma_cens(y=y, sr=sr))\n",
+    "    return chroma_cens\n",
+    "\n",
+    "def get_spectral_centroid(y, sr):\n",
+    "    spectral_centroid = np.array(librosa.feature.spectral_centroid(y=y, sr=sr))\n",
+    "    return spectral_centroid\n",
+    "\n",
+    "def get_spectral_bandwidth(y, sr):\n",
+    "    spectral_bandwidth = np.array(librosa.feature.spectral_bandwidth(y=y, sr=sr))\n",
+    "    return spectral_bandwidth\n",
+    "\n",
+    "def get_spectral_contrast(y, sr):\n",
+    "    spectral_contrast = np.array(librosa.feature.spectral_contrast(y=y, sr=sr))\n",
+    "    return spectral_contrast\n",
+    "\n",
+    "def get_spectral_flatness(y):\n",
+    "    spectral_flatness = np.array(librosa.feature.spectral_flatness(y=y))\n",
+    "    return spectral_flatness\n",
+    "\n",
+    "def get_spectral_rolloff(y, sr):\n",
+    "    spectral_rolloff = np.array(librosa.feature.spectral_rolloff(y=y, sr=sr))\n",
+    "    return spectral_rolloff\n",
+    "\n",
+    "def get_poly_features(y, sr):\n",
+    "    poly_features = np.array(librosa.feature.poly_features(y=y, sr=sr))\n",
+    "    return poly_features\n",
+    "\n",
+    "def get_rms(y):\n",
+    "    rms = np.array(librosa.feature.rms(y=y))\n",
+    "    return rms\n",
+    "\n",
+    "def get_zero_crossing_rate(y):\n",
+    "    zero_crossing_rate = np.array(librosa.feature.zero_crossing_rate(y=y))\n",
+    "    return zero_crossing_rate\n",
+    "\n",
+    "def get_tempogram(y, sr):\n",
+    "    tempogram = np.array(librosa.feature.tempogram(y=y, sr=sr))\n",
+    "    return tempogram\n",
+    "\n",
+    "def calculate_metrics(array):\n",
+    "    features = []\n",
+    "    mean = np.mean(array)\n",
+    "    value_min = np.min(array)\n",
+    "    value_max = np.max(array)\n",
+    "    median = np.median(array)\n",
+    "    std = np.std(array)\n",
+    "    skew = scipy.stats.skew(array, axis=None)\n",
+    "    kurtosis = scipy.stats.kurtosis(array, axis=None)\n",
+    "    features.append(mean)\n",
+    "    features.append(value_min)\n",
+    "    features.append(value_max)\n",
+    "    features.append(median)\n",
+    "    features.append(std)\n",
+    "    features.append(skew)\n",
+    "    features.append(kurtosis)\n",
+    "    return features\n",
+    "\n",
+    "    \n",
+    "X_test_elem = [[]]\n",
+    "y, sr = librosa.load(file_path, offset=0, duration=30)\n",
+    "Audio(data=y, rate=sr)\n",
+    "X_test_elem[0].extend(calculate_metrics(get_chroma_stft(y, sr)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_chroma_cens(y, sr)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_chroma_cqt(y, sr)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_melspectrogram(y, sr)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_mfcc(y, sr)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_poly_features(y, sr)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_rms(y)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_spectral_bandwidth(y, sr)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_spectral_centroid(y, sr)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_spectral_contrast(y, sr)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_spectral_flatness(y)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_spectral_rolloff(y, sr)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_tempogram(y, sr)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_tonnetz(y, sr)))\n",
+    "X_test_elem[0].extend(calculate_metrics(get_zero_crossing_rate(y)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "89794b67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.01229859 0.01142747 0.01901765 0.01024231 0.00189353 0.00188417\n",
+      "  0.52125254 0.04862351 0.03690693 0.00420581 0.10463007 0.12728307\n",
+      "  0.00357272 0.02913621 0.00542641 0.00346059 0.01797726 0.03494471\n",
+      "  0.00581644]]\n",
+      "[[0.01725007 0.01672401 0.03398342 0.01646403 0.0007274  0.00530323\n",
+      "  0.49744339 0.05912257 0.04890982 0.00367556 0.06528011 0.09697673\n",
+      "  0.00356851 0.04540759 0.0024691  0.00767147 0.03145335 0.03414639\n",
+      "  0.01342325]]\n",
+      "[[0.  0.  0.1 0.1 0.  0.  0.5 0.1 0.  0.  0.  0.2 0.  0.  0.  0.  0.  0.\n",
+      "  0. ]]\n",
+      "[[0.00000000e+000 0.00000000e+000 0.00000000e+000 0.00000000e+000\n",
+      "  2.32269524e-131 0.00000000e+000 9.99324805e-001 5.29180152e-103\n",
+      "  0.00000000e+000 0.00000000e+000 0.00000000e+000 0.00000000e+000\n",
+      "  1.32313559e-302 0.00000000e+000 0.00000000e+000 6.75194967e-004\n",
+      "  0.00000000e+000 5.90695573e-129 0.00000000e+000]]\n",
+      "[[0.01298701 0.02597403 0.06493506 0.         0.         0.\n",
+      "  0.32467532 0.11688312 0.03896104 0.01298701 0.09090909 0.\n",
+      "  0.01298701 0.11688312 0.06493506 0.         0.02597403 0.09090909\n",
+      "  0.        ]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but MLPClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the probability scores for each classifier.\n",
     "# We are supposing that the X train and y train are just the one element that we are trying\n",
@@ -1647,7 +1952,12 @@
     "lr_probs = lr_clf_chall.predict_proba(X_test_elem)\n",
     "knn_probs = knn_clf_chall.predict_proba(X_test_elem)\n",
     "mlp_probs = mlp_clf_chall.predict_proba(X_test_elem)\n",
-    "dt_probs = dt_clf_chall.predict_proba(X_test_elem)"
+    "dt_probs = dt_clf_chall.predict_proba(X_test_elem)\n",
+    "print(svm_probs)\n",
+    "print(lr_probs)\n",
+    "print(knn_probs)\n",
+    "print(mlp_probs)\n",
+    "print(dt_probs)"
    ]
   },
   {
@@ -1688,7 +1998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
