--- a/Music_Learning.ipynb
+++ b/Music_Learning.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "55491d84",
    "metadata": {},
    "outputs": [
@@ -1621,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "20a0affe",
    "metadata": {},
    "outputs": [
@@ -1655,16 +1655,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "48dc11e6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (645404702.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [16]\u001b[1;36m\u001b[0m\n\u001b[1;33m    X_test_elem = [[][]]\u001b[0m\n\u001b[1;37m                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\librosa\\util\\decorators.py:88: UserWarning: PySoundFile failed. Trying audioread instead.\n",
+      "  return f(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.47392195, 0.003036349, 1.0, 0.428064, 0.3089399, 0.2911161887670288, -1.1685668585643352, 0.2566996, 0.0, 0.68433756, 0.24586916, 0.13205548, 0.2929830593544105, 0.022303600365031873, 0.51677793, 0.04077109, 1.0, 0.47901458, 0.2609675, 0.39426579935245387, -0.901247046168713, 5.637989, 3.3923007e-11, 3784.0483, 0.0027076427, 78.74954, 26.03086777617822, 831.0282732965445, -0.07054484, -479.51678, 207.74896, 4.815145, 77.03591, -3.0371337415816275, 14.096548876400572, 0.8598812645933704, -0.0007029099830847816, 5.259055303607567, 0.03096196213633559, 1.1430506477820528, 1.0674760174294973, -0.11157168674159923, 0.120473444, 0.005930381, 0.4025456, 0.09323807, 0.09626796, 0.8983902404574177, -0.184570363749903, 1204.4620615727558, 301.2313901844538, 2643.265214260502, 985.1281085279675, 567.9593841536939, 0.7625344636132808, -0.41217630142231654, 852.888978698513, 108.78575246158164, 3433.088913988039, 629.9916219000079, 663.7826716432006, 1.494695426553799, 1.5888681368070472, 21.81452329661072, 2.2568509474924174, 58.24051081145938, 17.713949380285342, 11.272791759038531, 1.4105255848596383, 1.0739860748699606, 0.0020213488, 1.3919919e-07, 0.08153966, 5.2681513e-05, 0.0071881125, 6.3330411163988245, 49.435168529318894, 1698.2958757443357, 107.666015625, 6233.8623046875, 1281.2255859375, 1472.7903199230823, 1.1483142615709638, 0.2509114753614279, 0.17351622624992788, -3.302644493070368e-16, 1.0, 0.07058858162835202, 0.21567297800683274, 1.2386065914388393, 0.5925464790591937, -0.010262933801247646, -0.30675331316888343, 0.29782556276768424, -0.01250367239117674, 0.061250467120495575, 0.28320138820147434, 2.6779637466234236, 0.03088123608152595, 0.00390625, 0.23046875, 0.01904296875, 0.03317699714663199, 2.326849132317939, 6.349762256370889]]\n"
      ]
     }
    ],
@@ -1674,32 +1681,35 @@
     "\n",
     "# Open dialogue box\n",
     "file_path = open_file_dialog()\n",
-    "    \n",
-    "X_test_elem = [[][]]\n",
-    "header = retrieve_header()\n",
-    "X_test_elem[0].extend(header)\n",
+    "   \n",
+    "metrics = []\n",
+    "header = retrieve_header(1)\n",
     "\n",
     "y, sr = librosa.load(file_path, offset=0, duration=30)\n",
-    "X_test_elem[1].extend(calculate_metrics(get_chroma_stft(y, sr)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_chroma_cens(y, sr)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_chroma_cqt(y, sr)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_melspectrogram(y, sr)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_mfcc(y, sr)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_poly_features(y, sr)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_rms(y)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_spectral_bandwidth(y, sr)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_spectral_centroid(y, sr)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_spectral_contrast(y, sr)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_spectral_flatness(y)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_spectral_rolloff(y, sr)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_tempogram(y, sr)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_tonnetz(y, sr)))\n",
-    "X_test_elem[1].extend(calculate_metrics(get_zero_crossing_rate(y)))"
+    "metrics.extend(calculate_metrics(get_chroma_stft(y, sr)))\n",
+    "metrics.extend(calculate_metrics(get_chroma_cens(y, sr)))\n",
+    "metrics.extend(calculate_metrics(get_chroma_cqt(y, sr)))\n",
+    "metrics.extend(calculate_metrics(get_melspectrogram(y, sr)))\n",
+    "metrics.extend(calculate_metrics(get_mfcc(y, sr)))\n",
+    "metrics.extend(calculate_metrics(get_poly_features(y, sr)))\n",
+    "metrics.extend(calculate_metrics(get_rms(y)))\n",
+    "metrics.extend(calculate_metrics(get_spectral_bandwidth(y, sr)))\n",
+    "metrics.extend(calculate_metrics(get_spectral_centroid(y, sr)))\n",
+    "metrics.extend(calculate_metrics(get_spectral_contrast(y, sr)))\n",
+    "metrics.extend(calculate_metrics(get_spectral_flatness(y)))\n",
+    "metrics.extend(calculate_metrics(get_spectral_rolloff(y, sr)))\n",
+    "metrics.extend(calculate_metrics(get_tempogram(y, sr)))\n",
+    "metrics.extend(calculate_metrics(get_tonnetz(y, sr)))\n",
+    "metrics.extend(calculate_metrics(get_zero_crossing_rate(y)))\n",
+    "\n",
+    "#X_test_elem = [header, metrics]\n",
+    "X_test_elem = [metrics]\n",
+    "print(X_test_elem)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "89794b67",
    "metadata": {},
    "outputs": [
@@ -1708,22 +1718,26 @@
      "output_type": "stream",
      "text": [
       "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but SVC was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but MLPClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: 'filename'",
+     "ename": "NameError",
+     "evalue": "name 'sring_labels' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 18>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Get the probability scores for each classifier.\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# We are supposing that the X train and y train are just the one element that we are trying\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# to classify.\u001b[39;00m\n\u001b[0;32m     16\u001b[0m string_labels \u001b[38;5;241m=\u001b[39m le\u001b[38;5;241m.\u001b[39minverse_transform(labels) \u001b[38;5;66;03m# convert labels back\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m svm_probs \u001b[38;5;241m=\u001b[39m \u001b[43msvm_clf_chall\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict_proba\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_test_elem\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     19\u001b[0m lr_probs \u001b[38;5;241m=\u001b[39m lr_clf_chall\u001b[38;5;241m.\u001b[39mpredict_proba(X_test_elem)\n\u001b[0;32m     20\u001b[0m knn_probs \u001b[38;5;241m=\u001b[39m knn_clf_chall\u001b[38;5;241m.\u001b[39mpredict_proba(X_test_elem)\n",
-      "File \u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:853\u001b[0m, in \u001b[0;36mBaseSVC.predict_proba\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    826\u001b[0m \u001b[38;5;129m@available_if\u001b[39m(_check_proba)\n\u001b[0;32m    827\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict_proba\u001b[39m(\u001b[38;5;28mself\u001b[39m, X):\n\u001b[0;32m    828\u001b[0m     \u001b[38;5;124;03m\"\"\"Compute probabilities of possible outcomes for samples in X.\u001b[39;00m\n\u001b[0;32m    829\u001b[0m \n\u001b[0;32m    830\u001b[0m \u001b[38;5;124;03m    The model need to have probability information computed at training\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    851\u001b[0m \u001b[38;5;124;03m    datasets.\u001b[39;00m\n\u001b[0;32m    852\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 853\u001b[0m     X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_for_predict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    854\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprobA_\u001b[38;5;241m.\u001b[39msize \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprobB_\u001b[38;5;241m.\u001b[39msize \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m    855\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m NotFittedError(\n\u001b[0;32m    856\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpredict_proba is not available when fitted with probability=False\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    857\u001b[0m         )\n",
-      "File \u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:611\u001b[0m, in \u001b[0;36mBaseLibSVM._validate_for_predict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    608\u001b[0m check_is_fitted(\u001b[38;5;28mself\u001b[39m)\n\u001b[0;32m    610\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m callable(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkernel):\n\u001b[1;32m--> 611\u001b[0m     X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_data\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    612\u001b[0m \u001b[43m        \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    613\u001b[0m \u001b[43m        \u001b[49m\u001b[43maccept_sparse\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcsr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    614\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfloat64\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    615\u001b[0m \u001b[43m        \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mC\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m    616\u001b[0m \u001b[43m        \u001b[49m\u001b[43maccept_large_sparse\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    617\u001b[0m \u001b[43m        \u001b[49m\u001b[43mreset\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    618\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    620\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sparse \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m sp\u001b[38;5;241m.\u001b[39misspmatrix(X):\n\u001b[0;32m    621\u001b[0m     X \u001b[38;5;241m=\u001b[39m sp\u001b[38;5;241m.\u001b[39mcsr_matrix(X)\n",
-      "File \u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:577\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[0;32m    575\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValidation should be done on X, y or both.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    576\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m no_val_y:\n\u001b[1;32m--> 577\u001b[0m     X \u001b[38;5;241m=\u001b[39m check_array(X, input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_params)\n\u001b[0;32m    578\u001b[0m     out \u001b[38;5;241m=\u001b[39m X\n\u001b[0;32m    579\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_y:\n",
-      "File \u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:856\u001b[0m, in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[0m\n\u001b[0;32m    854\u001b[0m         array \u001b[38;5;241m=\u001b[39m array\u001b[38;5;241m.\u001b[39mastype(dtype, casting\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munsafe\u001b[39m\u001b[38;5;124m\"\u001b[39m, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m    855\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 856\u001b[0m         array \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43masarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    857\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m ComplexWarning \u001b[38;5;28;01mas\u001b[39;00m complex_warning:\n\u001b[0;32m    858\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    859\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mComplex data not supported\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(array)\n\u001b[0;32m    860\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcomplex_warning\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'filename'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 25>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     21\u001b[0m mlp_probs \u001b[38;5;241m=\u001b[39m mlp_clf_chall\u001b[38;5;241m.\u001b[39mpredict_proba(X_test_elem)\n\u001b[0;32m     22\u001b[0m dt_probs \u001b[38;5;241m=\u001b[39m dt_clf_chall\u001b[38;5;241m.\u001b[39mpredict_proba(X_test_elem)\n\u001b[1;32m---> 25\u001b[0m result1 \u001b[38;5;241m=\u001b[39m [\u001b[43msring_labels\u001b[49m, svm_probs]\n\u001b[0;32m     26\u001b[0m result2 \u001b[38;5;241m=\u001b[39m [sring_labels, lr_probs]\n\u001b[0;32m     27\u001b[0m result3 \u001b[38;5;241m=\u001b[39m [sring_labels, knn_probs]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sring_labels' is not defined"
      ]
     }
    ],
@@ -1751,11 +1765,17 @@
     "mlp_probs = mlp_clf_chall.predict_proba(X_test_elem)\n",
     "dt_probs = dt_clf_chall.predict_proba(X_test_elem)\n",
     "\n",
-    "print(svm_probs)\n",
-    "print(lr_probs)\n",
-    "print(knn_probs)\n",
-    "print(mlp_probs)\n",
-    "print(dt_probs)"
+    "\n",
+    "result1 = [string_labels, svm_probs]\n",
+    "result2 = [string_labels, lr_probs]\n",
+    "result3 = [string_labels, knn_probs]\n",
+    "result4 = [string_labels, mlp_probs]\n",
+    "result5 = [string_labels, dt_probs]\n",
+    "print(result1)\n",
+    "print(result2)\n",
+    "print(result3)\n",
+    "print(result4)\n",
+    "print(result5)"
    ]
   },
   {
