pca values for gridseachcv

--- a/Music_Learning.ipynb
+++ b/Music_Learning.ipynb
@@ -103,7 +103,7 @@
    "outputs": [],
    "source": [
     "VERSION = 1\n",
-    "EXEC_PROFILE = {\"Plain\": False, \"PCA\": False, \"FS\": False, \"SMOTE\": False, \"OVERS\": False}\n",
+    "EXEC_PROFILE = {\"PCA\": False, \"FS\": False, \"SMOTE\": False, \"OVERS\": False}\n",
     "\n",
     "header_str = \"PCA,FS,SMOTE,OVERS,accuracy\\n\"\n",
     "baseline_str = str(EXEC_PROFILE[\"PCA\"]) + \",\"+str(EXEC_PROFILE[\"FS\"])+\",\"+str(EXEC_PROFILE[\"SMOTE\"])+\",\"+str(EXEC_PROFILE[\"OVERS\"])"
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e693176d",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4d447cdc",
    "metadata": {},
    "outputs": [
@@ -415,6 +415,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "528bce6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_components_pca = [15, 30, 40, 60, 90]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "32a5fe96",
    "metadata": {},
@@ -433,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "27206e79",
    "metadata": {
     "scrolled": true
@@ -464,10 +474,10 @@
     "\n",
     "kernels = ['rbf']\n",
     "C_values = [1, 10, 25, 50, 100]\n",
-    "n_components = [1, 2, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
+    "#n_components = [1, 2, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
     "#n_components = [10, 20, 30, 40]\n",
     "#param_grid = {'C': C_values,'kernel': kernels}\n",
-    "param_grid = { \"pca__n_components\": n_components, \n",
+    "param_grid = { \"pca__n_components\": n_components_pca, \n",
     "              \"svc__C\": C_values,\n",
     "              \"svc__kernel\": kernels\n",
     "             }\n",
@@ -1580,10 +1590,10 @@
     "\n",
     "model_solvers = ['newton-cg', 'sag', 'saga', 'lbfgs']\n",
     "penalties = ['l1', 'l2', 'None']\n",
-    "n_components = [1, 2, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
+    "#n_components = [1, 2, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
     "#n_components = [10, 20, 30, 40]\n",
     "#param_grid = {'C': C_values,'kernel': kernels}\n",
-    "param_grid = { \"pca__n_components\": n_components, \n",
+    "param_grid = { \"pca__n_components\": n_components_pca, \n",
     "              \"logistic__solver\": model_solvers,\n",
     "              \"logistic__penalty\": penalties\n",
     "             }\n",
@@ -1641,9 +1651,9 @@
     "pipe = Pipeline(steps=[(\"scaler\", scaler), (\"pca\", pca), (\"knn\", knn)])\n",
     "\n",
     "\n",
-    "n_components = [1, 2, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
+    "#n_components = [1, 2, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
     "n_neighbors = [1, 2, 3, 5, 10, 15, 20, 25, 50, 100]\n",
-    "param_grid = { \"pca__n_components\": n_components, \n",
+    "param_grid = { \"pca__n_components\": n_components_pca,\n",
     "              \"knn__n_neighbors\": n_neighbors\n",
     "             }\n",
     "\n",
@@ -5908,10 +5918,10 @@
     "pipe = Pipeline(steps=[(\"scaler\", scaler), (\"pca\", pca), (\"mlp\", mlp)])\n",
     "\n",
     "\n",
-    "n_components = [1, 2, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
+    "#n_components = [1, 2, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
     "hlayers = [10, 20, 50, 75, 100, 150]\n",
     "alphas = [1e-1, 1e-2, 1e-3, 1e-4, 1e-5]\n",
-    "param_grid = { \"pca__n_components\": n_components, \n",
+    "param_grid = { \"pca__n_components\": n_components_pca,\n",
     "              \"mlp__alpha\": alphas,\n",
     "              \"mlp__hidden_layer_sizes\": hlayers\n",
     "             }\n",
@@ -5968,10 +5978,10 @@
     "pipe = Pipeline(steps=[(\"scaler\", scaler), (\"pca\", pca), (\"dt\", dt)])\n",
     "\n",
     "\n",
-    "n_components = [1, 2, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
+    "#n_components = [1, 2, 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
     "min_samples_leaf = [1, 5, 10, 25, 50, 75, 100]\n",
     "min_samples_split = [2, 4, 8]\n",
-    "param_grid = { \"pca__n_components\": n_components, \n",
+    "param_grid = { \"pca__n_components\": n_components_pca, \n",
     "              \"dt__min_samples_leaf\": min_samples_leaf,\n",
     "              \"dt__min_samples_split\": min_samples_split\n",
     "             }\n",
